1、sae_session 和 hustvote_session 分开管理 2、添加sae云推送 3、添加评论页面

--- a/app/src/main/res/menu/menu_hall.xml
+++ b/app/src/main/res/menu/menu_hall.xml
@@ -2,9 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.hustvote.hustvote.ui.BaseUI">
-    <item android:id="@+id/action_logout" android:title="注销"
-        android:orderInCategory="100" app:showAsAction="never" />
 
     <item android:id="@+id/action_scanner" android:title="扫描二维码"
+        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_notice" android:title="查看消息"
+        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_logout" android:title="注销"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
