--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,81 +1,111 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:gravity="center">
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
+            android:gravity="center_horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="邮箱"
-                android:id="@+id/emailLable" />
+            <ImageView
+                android:layout_width="400px"
+                android:layout_height="150px"
+                android:background="@drawable/title"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/title"/>
 
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/email_edit"
-                android:layout_weight="1" />
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
+            android:layout_marginRight="40dp"
+            android:layout_marginLeft="40dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="100px"
+            android:layout_marginBottom="10px">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="密码"
-                android:id="@+id/passwordLable" />
 
             <EditText
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
+                android:textSize="20sp"
+                android:background="@drawable/reccir"
+                android:id="@+id/email_edit"
+                android:layout_weight="1"
+                android:hint="登陆邮箱"
+                android:selectAllOnFocus="true"
+                android:gravity="center"
+                android:scrollHorizontally="true"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="40dp"
+            android:layout_marginLeft="40dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp">
+
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:textSize="20sp"
                 android:inputType="textPassword"
                 android:ems="10"
                 android:id="@+id/password_edit"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/reccir"
+                android:hint="密码"
+                android:selectAllOnFocus="true"
+                android:gravity="center"
+                android:scrollHorizontally="true"/>
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:layout_marginTop="50px">
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="登录"
+            <TextView
+                android:layout_width="121dp"
+                android:layout_height="48dp"
+                android:layout_marginRight="5dp"
+                android:text="登陆"
+                android:textSize="20sp"
+                android:textColor="#fff"
+                android:gravity="center"
+                android:background="@drawable/reccir_blue"
                 android:id="@+id/loginButton" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <TextView
+                android:layout_width="121dp"
+                android:layout_height="48dp"
+                android:layout_marginLeft="5dp"
                 android:text="注册"
+                android:textSize="20sp"
+                android:textColor="#03A9E4"
+                android:gravity="center"
+                android:background="@drawable/reccir_white"
                 android:id="@+id/registerButton" />
 
         </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"></LinearLayout>
 
     </LinearLayout>
 </RelativeLayout>
