--- a/app/src/main/res/layout/voteitem_layout.xml
+++ b/app/src/main/res/layout/voteitem_layout.xml
@@ -4,31 +4,60 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_gravity="center_horizontal"
+        android:background="@drawable/reccir_back"
         android:weightSum="1">
 
         <view
-            android:layout_width="92dp"
-            android:layout_height="84dp"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_marginTop="10dp"
             class="com.android.volley.toolbox.NetworkImageView"
             android:id="@+id/vote_item_image" />
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/vote_item_title" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="24sp"
+                    android:textColor="#3c3c3c"
+                    android:textStyle="bold"
+                    android:ems="8"
+                    android:id="@+id/vote_item_title" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:textColor="#9c9c9c"
+                    android:textStyle="bold"
+                    android:id="@+id/vote_item_time" />
+            </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:textColor="#3c3c3c"
+                android:textSize="20sp"
                 android:id="@+id/vote_item_summary" />
         </LinearLayout>
     </LinearLayout>
