--- a/app/src/main/res/layout/activity_vote.xml
+++ b/app/src/main/res/layout/activity_vote.xml
@@ -6,7 +6,10 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:divider="#00000000"
         android:id="@+id/vote_detail_choicelist"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_vertical" />
 
 </LinearLayout>
