--- a/app/src/main/res/layout/activity_vote_footer.xml
+++ b/app/src/main/res/layout/activity_vote_footer.xml
@@ -7,25 +7,45 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:paddingTop="10dp"
+        android:gravity="center_horizontal">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="48dp"
+            android:layout_marginRight="3dp"
+            android:gravity="center"
             android:text="提交"
-            android:id="@+id/vote_submit_button" />
+            android:textSize="18dp"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:id="@+id/vote_submit_button"
+            android:background="@drawable/reccir_blue"/>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:gravity="center"
             android:text="提示"
-            android:id="@+id/vote_info_button" />
+            android:textSize="18sp"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:id="@+id/vote_info_button"
+            android:background="@drawable/reccir_blue"/>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="3dp"
+            android:gravity="center"
             android:text="投票结果"
-            android:id="@+id/vote_result_button" />
+            android:textSize="18sp"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:id="@+id/vote_result_button"
+            android:background="@drawable/reccir_blue"/>
     </LinearLayout>
 
 </LinearLayout>
