--- a/app/src/main/res/layout/activity_vote.xml
+++ b/app/src/main/res/layout/activity_vote.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:focusableInTouchMode="false"
+    android:background="#ffffffff">
 
     <ListView
         android:layout_width="match_parent"
@@ -10,6 +12,7 @@
         android:layout_marginRight="5dp"
         android:divider="#00000000"
         android:id="@+id/vote_detail_choicelist"
-        android:layout_gravity="center_vertical" />
+        android:layout_gravity="center_vertical"
+        android:background="#ffffffff" />
 
 </LinearLayout>
