--- a/app/src/main/res/menu/menu_hall.xml
+++ b/app/src/main/res/menu/menu_hall.xml
@@ -3,12 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.hustvote.hustvote.ui.BaseUI">
 
-    <item android:id="@+id/action_scanner" android:title="@string/qrcode"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/action_scanner"
+        android:title="@string/qrcode"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 
-    <item android:id="@+id/action_notice" android:title="@string/message"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/action_notice"
+        android:title="@string/message"
+        android:icon="@drawable/message"
+        android:orderInCategory="50"
+        app:showAsAction="always" />
 
-    <item android:id="@+id/action_logout" android:title="@string/logout"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/action_logout"
+        android:title="@string/logout"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 </menu>
