--- a/app/src/main/res/layout/activity_vote_footer.xml
+++ b/app/src/main/res/layout/activity_vote_footer.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:layout_marginBottom="40dp">
 
         <Button
             android:layout_width="100dp"
