评论界面、消息界面、还有投票时间做好了。

--- a/app/src/main/res/layout/noticeitem_layout.xml
+++ b/app/src/main/res/layout/noticeitem_layout.xml
@@ -1,16 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/reccir"
+    android:layout_margin="5dp">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:textColor="#3c3c3c"
+        android:textSize="18sp"
         android:id="@+id/notice_title" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:textColor="#5c5c5c"
+        android:textSize="14sp"
+        android:ems="20"
         android:id="@+id/notice_content"
         android:layout_gravity="center_horizontal" />
 
