--- a/app/src/main/res/layout/voteitem_layout.xml
+++ b/app/src/main/res/layout/voteitem_layout.xml
@@ -25,6 +25,14 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:id="@+id/vote_item_deadline"
+                android:text="距离本次投票结束还有20小时。"
+                android:textColor="#990000"/>
+
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
@@ -36,7 +44,7 @@
                     android:textSize="20sp"
                     android:textColor="#3c3c3c"
                     android:textStyle="bold"
-                    android:ems="12"
+                    android:maxLength="12"
                     android:id="@+id/vote_item_title" />
 
                 <TextView
