--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -1,17 +1,20 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.hustvote.hustvote.ui.NoticeActivity">
+    tools:context="com.hustvote.hustvote.ui.review">
 
     <me.maxwin.view.XListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="#00000000"
+        android:divider="#ccc"
         android:dividerHeight="3dp"
-        android:id="@+id/notice_list_view"
+        android:id="@+id/review_list_view"
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true" />
-</RelativeLayout>
+
+</LinearLayout>
