--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.hustvote.hustvote.ui.review">
+    tools:context="com.hustvote.hustvote.ui.ReviewActivity">
 
     <me.maxwin.view.XListView
         android:layout_width="match_parent"
