--- a/app/src/main/res/layout/activity_vote_footer.xml
+++ b/app/src/main/res/layout/activity_vote_footer.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -23,30 +24,5 @@
             android:id="@+id/vote_submit_button"
             android:background="@drawable/reccir_blue"/>
 
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="48dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:gravity="center"
-            android:text="提示"
-            android:textSize="18sp"
-            android:textColor="#fff"
-            android:textStyle="bold"
-            android:id="@+id/vote_info_button"
-            android:background="@drawable/reccir_blue"/>
-
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="48dp"
-            android:layout_marginLeft="3dp"
-            android:gravity="center"
-            android:text="投票结果"
-            android:textSize="18sp"
-            android:textColor="#fff"
-            android:textStyle="bold"
-            android:id="@+id/vote_result_button"
-            android:background="@drawable/reccir_blue"/>
     </LinearLayout>
-
 </LinearLayout>
