--- a/app/src/main/res/layout/activity_choiceintro_fragment.xml
+++ b/app/src/main/res/layout/activity_choiceintro_fragment.xml
@@ -9,9 +9,9 @@
     -->
     <android.support.v4.view.PagerTitleStrip android:id="@+id/pager_title_strip"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_gravity="top"
-        android:background="#33b5e5"
+        android:background="#212121"
         android:textColor="#fff"
         android:paddingTop="4dp"
         android:paddingBottom="4dp" />
