--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -2,19 +2,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.hustvote.hustvote.ui.ReviewActivity">
 
     <me.maxwin.view.XListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:divider="#ccc"
-        android:dividerHeight="3dp"
+        android:dividerHeight="1dp"
         android:id="@+id/review_list_view"
+        android:layout_weight="1"
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal"
+        android:gravity="bottom|center"
+        android:background="@drawable/review_background">
+
+        <EditText
+            android:layout_width="325dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="3dp"
+            android:inputType="textMultiLine"
+            android:layout_marginLeft="3dp"
+            android:hint="写下你的评论"
+            android:maxLines="5"
+            android:textSize="18sp"
+            android:selectAllOnFocus="false"
+            android:id="@+id/commit"/>
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="48dp"
+            android:layout_marginRight="2dp"
+            android:background="@drawable/send"
+            android:id="@+id/send" />
+
+        </LinearLayout>
 
 </LinearLayout>
