--- a/app/src/main/res/layout/choiceitem_layout.xml
+++ b/app/src/main/res/layout/choiceitem_layout.xml
@@ -7,13 +7,10 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
         android:layout_marginTop="1dp"
         android:layout_marginBottom="1dp"
         android:layout_gravity="center_horizontal"
-        android:gravity="center_vertical"
-        android:background="@drawable/reccir">
+        android:gravity="center_vertical">
 
         <CheckBox
             android:layout_width="wrap_content"
