--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -9,12 +9,13 @@
         android:orientation="horizontal"
         android:layout_margin="10dp">
 
-        <ImageView
+        <view
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
-            android:background="@drawable/head"/>
+            class="com.android.volley.toolbox.NetworkImageView"
+            android:id="@+id/userIcon" />
 
         <LinearLayout
             android:layout_width="match_parent"
